--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,6 +38,18 @@
           <a class="title" href="">
             Web<span class="logo-studio">Studio</span>
           </a>
+          <input type="checkbox" id="check" />
+          <label for="check" class="checkbtn">
+            <svg
+              id="menu"
+              class="checkbtn"
+              width="16"
+              height="16"
+              viewBox="0 0 24 24"
+            >
+              <use href="./images/icons.svg#menu"></use>
+            </svg>
+          </label>
           <ul class="header-list">
             <li>
               <a class="nav-link" href="./index.html">Studio</a>
@@ -605,21 +624,18 @@
             </li>
           </ul>
         </div>
-        <!--  -->
         <div class="new">
           <p class="custom-paragraph-class">Subscribe</p>
           <form class="my-form">
-            <label class="my-label" for="email">
+            <label class="my-label">
               <input
                 class="my-input"
                 type="email"
-                id="email"
                 name="email"
                 placeholder="E-mail"
-                required
               />
             </label>
-            <button class="my-button" type="submit">
+            <button class="my-button" type="submit" tabindex="0">
               <svg
                 id="icon"
                 class="my-svg"
@@ -630,6 +646,7 @@
               >
                 <use href="./images/icons.svg#frame"></use>
               </svg>
+
               Subscribe
             </button>
           </form>
