mobile-section-div

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <a class="title" href="">
             Web<span class="logo-studio">Studio</span>
           </a>
-          <input type="checkbox" id="check" />
-          <label for="check" class="checkbtn">
+          <!-- opeb-btn -->
+          <button type="button" class="menu-open-btn">
             <svg
               id="menu"
               class="checkbtn"
@@ -49,7 +49,7 @@
             >
               <use href="./images/icons.svg#menu"></use>
             </svg>
-          </label>
+          </button>
           <ul class="header-list">
             <li>
               <a class="nav-link" href="./index.html">Studio</a>
@@ -73,6 +73,107 @@
               <a class="adress_link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
+            </li>
+          </ul>
+        </address>
+      </div>
+      <!-- New header- section -->
+      <div class="mob-menu">
+        <!-- close-btn -->
+        <button type="button" class="menu-close-btn">
+          <svg
+            class="menu-button"
+            tabindex="0"
+            width="8"
+            height="8"
+            viewBox="0 0 8 8"
+          >
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+        <div class="div-mod">
+          <nav class="mob-navigation">
+            <ul class="mob-list">
+              <li>
+                <a class="mob-link" href="./index.html">Studio</a>
+              </li>
+              <li>
+                <a class="mob-link" href="">Portfolio</a>
+              </li>
+              <li>
+                <a class="mob-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <address class="mob-address">
+          <ul class="mob-adress-ul">
+            <li>
+              <a class="mob-adress-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="mob-adress-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+          <ul class="mob-social-media-list">
+            <!-- Перше посилання -->
+            <li class="mob-li-class">
+              <a href="#" class="mob-social-link">
+                <svg
+                  id="icon-instagram"
+                  class="mob-svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Друге посилання -->
+            <li class="mob-li-class">
+              <a href="#" class="mob-social-link">
+                <svg
+                  id="icon-twitter"
+                  class="mob-svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Третє посилання -->
+            <li class="mob-li-class">
+              <a href="#" class="mob-social-link">
+                <svg
+                  id="icon-facebook"
+                  class="mob-svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Четверте посилання -->
+            <li class="mob-li-class">
+              <a href="#" class="mob-social-link">
+                <svg
+                  id="icon-linkedin"
+                  class="mob-svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </address>
@@ -653,7 +754,7 @@
         </div>
       </div>
     </footer>
-    <div class="new-section">
+    <!-- <div class="new-section">
       <div class="modal">
         <button class="modal-button" type="button">
           <svg
@@ -665,13 +766,13 @@
           >
             <use href="./images/icons.svg#close"></use>
           </svg>
-          <!-- Button -->
+          Button
         </button>
         <p class="modal-content">
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form">
-          <!-- The 1st div -->
+          The 1st div
           <div class="form-div">
             <label for="user-name" class="label-style">Name</label>
             <div class="form-container-input">
@@ -687,7 +788,7 @@
             </div>
           </div>
 
-          <!-- The 2nd div -->
+          The 2nd div
           <div class="form-div">
             <label for="user-tel" class="label-style">Phone</label>
             <div class="form-container-input">
@@ -703,7 +804,7 @@
             </div>
           </div>
 
-          <!-- The 3rd div -->
+          The 3rd div
           <div class="form-div">
             <label for="user-email" class="label-style">Email</label>
             <div class="form-container-input">
@@ -719,7 +820,7 @@
             </div>
           </div>
 
-          <!-- The 4th div -->
+          The 4th div
           <div class="form-new-div">
             <label for="user-comment" class="label-style">Comment</label>
             <textarea
@@ -730,7 +831,7 @@
             ></textarea>
           </div>
 
-          <!-- The 5th div -->
+          The 5th div
           <div class="form-lebel-checkbox">
             <input
               class="input-title visually-hidden"
@@ -750,10 +851,10 @@
             </label>
           </div>
 
-          <!-- The Button -->
+          The Button
           <button class="button-bottom" type="button">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
