--- a/index.html
+++ b/index.html
@@ -552,108 +552,110 @@
     <footer class="footer">
       <!-- Логотип і параграф -->
 
-      <div class="container_full">
+      <div class="container-footer container">
         <div class="container_wrapper">
-          <a class="title-footer" href="./index.html">
-            Web<span class="logo">Studio</span>
-          </a>
-          <p class="footer-paragraph">
-            Increase the flow of customers and <br />
-            sales for your business with digital <br />
-            marketing & growth solutions.
-          </p>
-        </div>
+          <div class="text-footer">
+            <a class="title-footer" href="./index.html">
+              Web<span class="logo">Studio</span>
+            </a>
+            <p class="footer-paragraph">
+              Increase the flow of customers and <br />
+              sales for your business with digital <br />
+              marketing & growth solutions.
+            </p>
+          </div>
 
-        <!-- Контейнер для соцмереж -->
-        <div class="social-media">
-          <!-- Параграф -->
-          <p class="p-class">Social media</p>
+          <!-- Контейнер для соцмереж -->
+          <div class="social-media">
+            <!-- Параграф -->
+            <p class="p-class">Social media</p>
 
-          <!-- Список соцмереж -->
-          <ul class="social-media-list">
-            <!-- Перше посилання -->
-            <li class="li-class">
-              <a href="#" class="social-link">
+            <!-- Список соцмереж -->
+            <ul class="social-media-list">
+              <!-- Перше посилання -->
+              <li class="li-class">
+                <a href="#" class="social-link">
+                  <svg
+                    id="icon-instagram"
+                    class="svg-footer"
+                    width="24"
+                    height="24"
+                  >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <!-- Друге посилання -->
+              <li class="li-class">
+                <a href="#" class="social-link">
+                  <svg
+                    id="icon-twitter"
+                    class="svg-footer"
+                    width="24"
+                    height="24"
+                  >
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <!-- Третє посилання -->
+              <li class="li-class">
+                <a href="#" class="social-link">
+                  <svg
+                    id="icon-facebook"
+                    class="svg-footer"
+                    width="24"
+                    height="24"
+                  >
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <!-- Четверте посилання -->
+              <li class="li-class">
+                <a href="#" class="social-link">
+                  <svg
+                    id="icon-linkedin"
+                    class="svg-footer"
+                    width="24"
+                    height="24"
+                  >
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="new">
+            <p class="custom-paragraph-class">Subscribe</p>
+            <form class="my-form">
+              <label class="my-label">
+                <input
+                  class="my-input"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button class="my-button" type="submit" tabindex="0">
                 <svg
-                  id="icon-instagram"
-                  class="svg-footer"
+                  id="icon"
+                  class="my-svg"
                   width="24"
                   height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
                 >
-                  <use href="./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#frame"></use>
                 </svg>
-              </a>
-            </li>
 
-            <!-- Друге посилання -->
-            <li class="li-class">
-              <a href="#" class="social-link">
-                <svg
-                  id="icon-twitter"
-                  class="svg-footer"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-
-            <!-- Третє посилання -->
-            <li class="li-class">
-              <a href="#" class="social-link">
-                <svg
-                  id="icon-facebook"
-                  class="svg-footer"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-
-            <!-- Четверте посилання -->
-            <li class="li-class">
-              <a href="#" class="social-link">
-                <svg
-                  id="icon-linkedin"
-                  class="svg-footer"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="new">
-          <p class="custom-paragraph-class">Subscribe</p>
-          <form class="my-form">
-            <label class="my-label">
-              <input
-                class="my-input"
-                type="email"
-                name="email"
-                placeholder="E-mail"
-              />
-            </label>
-            <button class="my-button" type="submit" tabindex="0">
-              <svg
-                id="icon"
-                class="my-svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-              >
-                <use href="./images/icons.svg#frame"></use>
-              </svg>
-
-              Subscribe
-            </button>
-          </form>
+                Subscribe
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
