--- a/index.html
+++ b/index.html
@@ -81,6 +81,107 @@
         </div>
       </div>
       <!-- New header- section -->
+      <!-- New header- section -->
+      <div class="mob-menu">
+        <!-- close-btn -->
+        <button type="button" class="menu-close-btn">
+          <svg
+            class="menu-button"
+            tabindex="0"
+            width="8"
+            height="8"
+            viewBox="0 0 8 8"
+          >
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+        <div class="div-mod">
+          <nav class="mob-navigation">
+            <ul class="mob-list">
+              <li>
+                <a class="mob-link" href="./index.html">Studio</a>
+              </li>
+              <li>
+                <a class="mob-link" href="">Portfolio</a>
+              </li>
+              <li>
+                <a class="mob-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <address class="mob-address">
+          <ul class="mob-adress-ul">
+            <li>
+              <a class="mob-adress-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="mob-adress-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+          <ul class="mob-social-media-list">
+            <!-- Перше посилання -->
+            <li class="mob-li-class">
+              <a href="#" class="mob-social-link">
+                <svg
+                  id="icon-instagram"
+                  class="mob-svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Друге посилання -->
+            <li class="mob-li-class">
+              <a href="#" class="mob-social-link">
+                <svg
+                  id="icon-twitter"
+                  class="mob-svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Третє посилання -->
+            <li class="mob-li-class">
+              <a href="#" class="mob-social-link">
+                <svg
+                  id="icon-facebook"
+                  class="mob-svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Четверте посилання -->
+            <li class="mob-li-class">
+              <a href="#" class="mob-social-link">
+                <svg
+                  id="icon-linkedin"
+                  class="mob-svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
