--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <use href="./images/icons.svg#icon-antena"></use>
                 </svg>
               </div>
-              <h3 class="section-list-item-title">Strategy</h3>
+              <h3 class="section-list-item-title-header">Strategy</h3>
               <p class="section-list-item-paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -120,7 +120,7 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="section-list-item-title">Punctuality</h3>
+              <h3 class="section-list-item-title-header">Punctuality</h3>
               <p class="section-list-item-paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -134,7 +134,7 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="section-list-item-title">Diligence</h3>
+              <h3 class="section-list-item-title-header">Diligence</h3>
               <p class="section-list-item-paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -148,7 +148,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="section-list-item-title">Technologies</h3>
+              <h3 class="section-list-item-title-header">Technologies</h3>
               <p class="section-list-item-paragraph">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -552,7 +552,7 @@
     <footer class="footer">
       <!-- Логотип і параграф -->
 
-      <div class="container-footer container">
+      <div class="container-full container">
         <div class="container_wrapper">
           <div class="text-footer">
             <a class="title-footer" href="./index.html">
@@ -641,17 +641,9 @@
                 />
               </label>
               <button class="my-button" type="submit" tabindex="0">
-                <svg
-                  id="icon"
-                  class="my-svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                >
+                <svg id="frame" class="my-svg" width="24" height="24">
                   <use href="./images/icons.svg#frame"></use>
                 </svg>
-
                 Subscribe
               </button>
             </form>
