full-foto-and-code

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             <!-- Mark Guerrero -->
             <li class="list-container">
               <img
+                srcset="./images/foto1.jpg 1x, ./images/foto1@2x.jpg"
                 src="./images/foto1.jpg"
                 alt="Mark Guerrero, Product Designer"
                 width="264"
@@ -230,6 +231,7 @@
             <!-- Tom Ford -->
             <li class="list-container">
               <img
+                srcset="./images/foto2.jpg 1x, ./images/foto2@2x.jpg"
                 src="./images/foto2.jpg"
                 alt="Tom Ford, Frontend Developer"
                 width="264"
@@ -294,6 +296,7 @@
             <!-- Camila Garcia -->
             <li class="list-container">
               <img
+                srcset="./images/foto3.jpg 1x, ./images/foto3@2x.jpg"
                 src="./images/foto3.jpg"
                 alt="Camila Garcia, Marketing"
                 width="264"
@@ -358,6 +361,7 @@
             <!-- Daniel Wilson -->
             <li class="list-container">
               <img
+                srcset="./images/foto4.jpg 1x, ./images/foto4@2x.jpg"
                 src="./images/foto4.jpg"
                 alt="Daniel Wilson, UI Designer"
                 width="264"
@@ -432,6 +436,7 @@
             <li class="start-apps">
               <div class="div-img">
                 <img
+                  srcset="./images/foto5.jpg 1x, ./images/foto5@2x.jpg"
                   src="./images/foto5.jpg"
                   alt="Banking App"
                   width="360"
@@ -451,6 +456,7 @@
             <li class="start-apps">
               <div class="div-img">
                 <img
+                  srcset="./images/foto6.jpg 1x, ./images/foto6@2x.jpg"
                   src="./images/foto6.jpg"
                   alt="Cashless Payment"
                   width="360"
@@ -470,6 +476,7 @@
             <li class="start-apps">
               <div class="div-img">
                 <img
+                  srcset="./images/foto7.jpg 1x, ./images/foto7@2x.jpg"
                   src="./images/foto7.jpg"
                   alt="Meditation App"
                   width="360"
@@ -489,6 +496,7 @@
             <li class="start-apps">
               <div class="div-img">
                 <img
+                  srcset="./images/foto8.jpg 1x, ./images/foto8@2x.jpg"
                   src="./images/foto8.jpg"
                   alt="Taxi Service"
                   width="360"
@@ -508,6 +516,7 @@
             <li class="start-apps">
               <div class="div-img">
                 <img
+                  srcset="./images/foto9.jpg 1x, ./images/foto9@2x.jpg"
                   src="./images/foto9.jpg"
                   alt="Screen Illustrations"
                   width="360"
@@ -527,6 +536,7 @@
             <li class="start-apps">
               <div class="div-img">
                 <img
+                  srcset="./images/foto10.jpg 1x, ./images/foto10@2x.jpg"
                   src="./images/foto10.jpg"
                   alt="Online Courses"
                   width="360"
