--- a/index.html
+++ b/index.html
@@ -53,19 +53,20 @@
         </nav>
 
         <address class="address">
-          <ul class="adress-ul">
+          <ul class="address-ul">
             <li>
-              <a class="adress_link" href="mailto:info@devstudio.com"
+              <a class="address_link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a class="adress_link" href="tel:+110001111111"
+              <a class="address_link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
           </ul>
         </address>
+
         <div class="div-open-btn">
           <button type="button" class="menu-open-btn">
             <svg
@@ -435,13 +436,26 @@
           <ul class="porfolio-position">
             <li class="start-apps">
               <div class="div-img">
-                <img
-                  srcset="./images/foto5.jpg 1x, ./images/foto5@2x.jpg"
-                  src="./images/foto5.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="420"
-                />
+                <picture class="picture-cont">
+                  <source
+                    srcset="./images/foto5@2x.jpg"
+                    media="(max-width: 767px)"
+                    width="288"
+                    height="280"
+                  />
+                  <source
+                    srcset="./images/foto5@3x.jpg"
+                    media="(max-width: 1157px)"
+                    width="356"
+                    height="300"
+                  />
+                  <img
+                    src="./images/foto5.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="420"
+                  />
+                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -455,13 +469,26 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
-                <img
-                  srcset="./images/foto6.jpg 1x, ./images/foto6@2x.jpg"
-                  src="./images/foto6.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="420"
-                />
+                <picture class="picture-cont">
+                  <source
+                    srcset="./images/foto6@2x.jpg"
+                    media="(max-width: 767px)"
+                    width="288"
+                    height="280"
+                  />
+                  <source
+                    srcset="./images/foto6@3x.jpg"
+                    media="(max-width: 1157px)"
+                    width="356"
+                    height="300"
+                  />
+                  <img
+                    src="./images/foto6.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="420"
+                  />
+                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -475,13 +502,26 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
-                <img
-                  srcset="./images/foto7.jpg 1x, ./images/foto7@2x.jpg"
-                  src="./images/foto7.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="420"
-                />
+                <picture class="picture-cont">
+                  <source
+                    srcset="./images/foto7@2x.jpg"
+                    media="(max-width: 767px)"
+                    width="288"
+                    height="280"
+                  />
+                  <source
+                    srcset="./images/foto7@3x.jpg"
+                    media="(max-width: 1157px)"
+                    width="356"
+                    height="300"
+                  />
+                  <img
+                    src="./images/foto7.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="420"
+                  />
+                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -495,13 +535,26 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
-                <img
-                  srcset="./images/foto8.jpg 1x, ./images/foto8@2x.jpg"
-                  src="./images/foto8.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="420"
-                />
+                <picture class="picture-cont">
+                  <source
+                    srcset="./images/foto8@2x.jpg"
+                    media="(max-width: 767px)"
+                    width="288"
+                    height="280"
+                  />
+                  <source
+                    srcset="./images/foto8@3x.jpg"
+                    media="(max-width: 1157px)"
+                    width="356"
+                    height="300"
+                  />
+                  <img
+                    src="./images/foto8.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="420"
+                  />
+                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -515,13 +568,26 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
-                <img
-                  srcset="./images/foto9.jpg 1x, ./images/foto9@2x.jpg"
-                  src="./images/foto9.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="420"
-                />
+                <picture class="picture-cont">
+                  <source
+                    srcset="./images/foto9@2x.jpg"
+                    media="(max-width: 767px)"
+                    width="288"
+                    height="280"
+                  />
+                  <source
+                    srcset="./images/foto9@3x.jpg"
+                    media="(max-width: 1157px)"
+                    width="356"
+                    height="300"
+                  />
+                  <img
+                    src="./images/foto9.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="420"
+                  />
+                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -535,13 +601,26 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
-                <img
-                  srcset="./images/foto10.jpg 1x, ./images/foto10@2x.jpg"
-                  src="./images/foto10.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="420"
-                />
+                <picture class="picture-cont">
+                  <source
+                    srcset="./images/foto10@2x.jpg"
+                    media="(max-width: 767px)"
+                    width="288"
+                    height="280"
+                  />
+                  <source
+                    srcset="./images/foto10@3x.jpg"
+                    media="(max-width: 1157px)"
+                    width="356"
+                    height="300"
+                  />
+                  <img
+                    src="./images/foto10.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="420"
+                  />
+                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -563,101 +642,99 @@
       <!-- Логотип і параграф -->
 
       <div class="container-full container">
-        <div class="container_wrapper">
-          <div class="text-footer">
-            <a class="title-footer" href="./index.html">
-              Web<span class="logo">Studio</span>
-            </a>
-            <p class="footer-paragraph">
-              Increase the flow of customers and <br />
-              sales for your business with digital <br />
-              marketing & growth solutions.
-            </p>
-          </div>
+        <div class="text-footer">
+          <a class="title-footer" href="./index.html">
+            Web<span class="logo">Studio</span>
+          </a>
+          <p class="footer-paragraph">
+            Increase the flow of customers and <br />
+            sales for your business with digital <br />
+            marketing & growth solutions.
+          </p>
+        </div>
 
-          <!-- Контейнер для соцмереж -->
-          <div class="social-media">
-            <!-- Параграф -->
-            <p class="p-class">Social media</p>
+        <!-- Контейнер для соцмереж -->
+        <div class="social-media">
+          <!-- Параграф -->
+          <p class="p-class">Social media</p>
 
-            <!-- Список соцмереж -->
-            <ul class="social-media-list">
-              <!-- Перше посилання -->
-              <li class="li-class">
-                <a href="#" class="social-link">
-                  <svg
-                    id="icon-instagram"
-                    class="svg-footer"
-                    width="24"
-                    height="24"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <!-- Друге посилання -->
-              <li class="li-class">
-                <a href="#" class="social-link">
-                  <svg
-                    id="icon-twitter"
-                    class="svg-footer"
-                    width="24"
-                    height="24"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <!-- Третє посилання -->
-              <li class="li-class">
-                <a href="#" class="social-link">
-                  <svg
-                    id="icon-facebook"
-                    class="svg-footer"
-                    width="24"
-                    height="24"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <!-- Четверте посилання -->
-              <li class="li-class">
-                <a href="#" class="social-link">
-                  <svg
-                    id="icon-linkedin"
-                    class="svg-footer"
-                    width="24"
-                    height="24"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="new">
-            <p class="custom-paragraph-class">Subscribe</p>
-            <form class="my-form">
-              <label class="my-label">
-                <input
-                  class="my-input"
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                />
-              </label>
-              <button class="my-button" type="submit" tabindex="0">
-                <svg id="frame" class="my-svg" width="24" height="24">
-                  <use href="./images/icons.svg#frame"></use>
+          <!-- Список соцмереж -->
+          <ul class="social-media-list">
+            <!-- Перше посилання -->
+            <li class="li-class">
+              <a href="#" class="social-link">
+                <svg
+                  id="icon-instagram"
+                  class="svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
-                Subscribe
-              </button>
-            </form>
-          </div>
+              </a>
+            </li>
+
+            <!-- Друге посилання -->
+            <li class="li-class">
+              <a href="#" class="social-link">
+                <svg
+                  id="icon-twitter"
+                  class="svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Третє посилання -->
+            <li class="li-class">
+              <a href="#" class="social-link">
+                <svg
+                  id="icon-facebook"
+                  class="svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Четверте посилання -->
+            <li class="li-class">
+              <a href="#" class="social-link">
+                <svg
+                  id="icon-linkedin"
+                  class="svg-footer"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="new">
+          <p class="custom-paragraph-class">Subscribe</p>
+          <form class="my-form">
+            <label class="my-label">
+              <input
+                class="my-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="my-button" type="submit" tabindex="0">
+              <svg id="frame" class="my-svg" width="24" height="24">
+                <use href="./images/icons.svg#frame"></use>
+              </svg>
+              Subscribe
+            </button>
+          </form>
         </div>
       </div>
     </footer>
